--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -1,9 +1,26 @@
 <html>
 <head>
-<title>Mailroom</title>
+	<title>Mailroom</title>
+	<style>
+		a {
+			background-color: DodgerBlue;
+			color: white;
+			padding: 15px 25px;
+			text-align: center;
+			display: inline-block;
+			text-decoration: none;
+			width: 100px;
+		}
+
+		a:hover {
+			background-color: DarkBlue;
+		}
+	</style>
 </head>
 <body>
 	<h1>Donations</h1>
+	<a href="/add_donation/">New Donation</a>
+	<a href="/">Home</a>
 	<h2>{% block subtitle %} {% endblock subtitle %}</h2>
 	{% block content %} {% endblock content %}
 </body>
